<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.propertydealer.ledger.ui.home.HomeFragment"
        android:label="@string/title_seller"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.propertydealer.ledger.ui.dashboard.DashboardFragment"
        android:label="@string/title_buyer"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.propertydealer.ledger.ui.notifications.NotificationsFragment"
        android:label="@string/title_diary"
        tools:layout="@layout/fragment_notifications" />
</navigation>